# lambda

./: README.md  build.sh  cargo.toml  device_api.html  plant_info.html  sensor_api.html  wishlist.html
.github/workflows/: generate_docs.yml
create_history_lambda/: Cargo.toml
create_history_lambda/src/: main.rs
device_api/: Cargo.toml  TODO
device_api/src/: main.rs  router.rs
device_api/utils/: delete_sensor.json  get_sensors.json  new_sensor.json
docs/: device_api.yaml  plant_info.yaml  sensor_api.yaml  wishlist.yaml
get_sensors_data/: Cargo.toml
get_sensors_data/src/: main.rs
get_sensors_data/utils/: get_event.json
helper/: Cargo.toml
helper/src/: lib.rs
mqtt_lambda/: TODO
mqtt_lambda/utils/: test.sh
mqtt_month_media_processor/: Cargo.toml
mqtt_month_media_processor/src/: main.rs
mqtt_month_media_processor/utils/: deploy.sh  lambda_policy.json  test.json
notification_register_api/: Cargo.toml
notification_register_api/src/: main.rs
notification_register_api/utils/: post_request.json
notification_sender/: Cargo.toml
notification_sender/src/: main.rs
notification_sender/utils/: test_mqtt_message.json
plant_info_api/: Cargo.toml  example_body.json
plant_info_api/src/: main.rs
plant_info_api/src/router/: mod.rs
plant_info_api/src/router/endpoints/: mod.rs
plant_info_api/src/router/models/: mod.rs
plant_info_api/utils/: get_event.json  post_event.json
plants_db_donwloader/: Cargo.toml  example.json
plants_db_donwloader/src/: main.rs
stats_api/: Cargo.toml
wishlist_api/: Cargo.toml
wishlist_api/src/: main.rs
(+9 files in other folders)
