[package]
name = "mqtt_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
chrono = "0.4.24"
lambda_runtime = "0.8.0"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
