[package]
name = "plant_info_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.30.0"
aws-sdk-iotdataplane = "0.30.0"
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
serde = "1.0.169"
serde_json = "1.0.100"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

